[package]
name = "participatory-tools"
version = "0.1.0"
authors = ["Fatorin <sksly789@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "Help the streamer easily manage participating players."
repository = "https://github.com/Fatorin/participatory-tools"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.88"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6.1"

[dev-dependencies]
wasm-bindgen-test = "0.3.34"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
